2012-10-03 Franz Holzinger  <franz@ttproducts.de>
	* return a boolean FALSE in decryptPasswordForAutoLogin if there is a problem with the rsaauth backend decryption
	* do not require rsaauth to be installed

2012-10-02 Franz Holzinger  <franz@ttproducts.de>
	* return a boolean FALSE if there is a problem with the saltedpasswords
	* do not require saltedpasswords to be installed

2012-09-11 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #40812: wrong usage of sprintf when locallang wants to report a text which is not replaced by div2007

2012-07-11 Franz Holzinger  <franz@ttproducts.de>
	* fix bug with captcha: The subpart marker ###SUB_ERROR_FIELD_captcha_response### for the field captcha_response has not been generated.

2012-05-04 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #36838: FE user password saved in BE is displayed in plaintext
	* Version 3.0.1

2012-04-28 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Remove middle_name from default setup
	* Move some functions to tx_srfeuserregister_display
	* Update to manual
	* Add label evalErrors_uniqueLocal_email_informal
	* Version 3.0.0

2012-04-27 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Require div2007 0.10.1
	* Fix bug #36675: Query parameter cmd is not honoured
	* Fix bug #36526: authCode is not compatible with standard authentication code
	* Fix bug #36504: SR's authentication code does not match the one from DirectMail
	* Fix bug #36680: authCode is not horoured if short urls are enabled
	* Follow-up to feature #36123: Allow evaluation of email and captcha on the infomail form
	* Add feature #36682: Add setfixed option to unsubscribe a fe user without having to login

2012-04-26 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #36590: Infomail form does not display email validation error
	* Fix bug #36638: Composite name may be substituted with a single space

2012-04-24 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Cleanup in ext_localconf.php
	* Fix class name in ext_autoload.php